iRedMail-0.8.2:
    * It now works on openSUSE-12.2 (code name Mantis), with all 3 backends
      available. Tested with openSUSE 12.2 RC1.
    * Drop support for Ubuntu-11.10 (oneiric).
    * New columns for MySQL/PGSQL backend in table vmail.mailbox:
      isadmin, isglobaladmin, language.
    * Allow to use LDAP attribute shadowAddress for mail list account.
      Thanks chrisjrob <cjr _at_ tridentgarages.co.uk> for the report.
    * Add checkpoint setting in OpenLDAP for data recovery, used to define
      the time between BDB checkpoint operations. Default is whenever 128kb
      data bytes written or 5 minutes has elapsed whichever occurs first.
    * Rotate Dovecot log files on OpenBSD and FreeBSD.
    * Allow to use LDAP attribute domainGlobalAdmin for mail user.
    * Fixed:
        + [LDAP] Incorrect maildir path while using Postfix built-in
          'virtual' transport.
        + Incorrect log rotate setting of iRedAPD log file on FreeBSD.
          Thanks openbsdnoob <w-chi _at_ gmx.de> for the report.
    * Package update:
        + phpMyAdmin -> 3.5.2.2
        + iRedAPD -> 1.3.8
        + iRedAdmin -> 0.1.9
        + Roundcube webmail -> 0.8.1

iRedMail-0.8.1:
    * It now works on Debian wheezy. Tested with Debian wheezy alpha 1.
    * Drop support for Linux Mint. Sorry, not a server OS.
    * Add new column 'mailbox.language' in MySQL & PGSQL backends, used by
      iRedAdmin.
    * Make sure per-user BCC settings have higher priority than per-domain
      settings.
    * Enforce connections over https in Roundcube.
    * Fixed:
        + Incorrect MySQL user password and databases in MySQL backup script.
        + Add missing rotate config for iRedAPD log file on FreeBSD, OpenBSD.
        + Add missing config and SQL table required for sharing IMAP folder to
          anyone. Thanks BigMichi1 <bigmichi1 _at_ bigmichi1.de>.
        + Add missing auth service in Dovecot-2: auth-userdb.