@@ -1,4 +1,7 @@
 iRedMail-0.8.2:
+    * Add shell script to backup PostgreSQL databases in cron by default.
+      Script is /var/vmail/backup/backup_pgsql.sh, backup directory is
+      /var/vmail/backup/pgsql/.
     * It now works on openSUSE-12.2 (code name Mantis), with all 3 backends
       available. Tested with openSUSE 12.2 RC1.
     * Drop support for Ubuntu-11.10 (oneiric).
